bochs (2.3-1) UNRELEASED; urgency=low

  * New Upstream Release.
    - debian/patches/00_base.patch: Sync.
    - debian/patches/03_g++-4.1.patch: Integrated upstream. Remove.
    - debian/patches/04_wx2.6.patch: Likewise.

 -- Guillem Jover <guillem@debian.org>  Sun, 17 Sep 2006 00:54:58 +0300

bochs (2.2.6-2) unstable; urgency=low

  * Fix typos in bochsrc(5). (Closes: #356012)
    - debian/patches/01_man.patch: New file.
    Thanks to A Costa <agcosta@gis.net>.
  * Fix clean target by calling upstream dist-clean, bios-clean under bios/,
    and removing the misc/sb16/sb16ctrl and bios/VGABIOS-*.
  * Switch to libwxgtk2.6-dev and libgtk2.0-dev.
    - debian/patches/04_wx2.6.patch: New file.
    Thanks to Hans de Goede <j.w.r.degoede@hhs.nl>.
  * Fix FTBFS with g++ 4.1. (Closes: #357059)
    - debian/patches/03_g++-4.1.patch: New file.
    Thanks to Martin Michlmayr <tbm@cyrius.com>.

 -- Guillem Jover <guillem@debian.org>  Tue, 21 Mar 2006 02:51:22 +0200

bochs (2.2.6-1) unstable; urgency=low

  * New Upstream Release.
    - debian/patches/01_doc.patch: Integrated upstream. Remove.
    - debian/patches/03_gcc-4.0.patch: Likewise.
    - debian/patches/00_base.patch: Sync.
    - debian/patches/02_libtool.patch: Likewise.
  * Do not install ROM BIOS that are not built anymore.
  * Do not create a fake stamp file for the ROM BIOS.
  * Fix debian/sb16ctrl.1:
    - Change the SEE ALSO references to be bold.
    - Escaped some hyphens.
    - Reindent the Bochs Online Documentation's URL.
  * Build the svga module on amd64. (Closes: #346577)
    Thanks to Kaare Hviid <ukh@svansen.se> for the initial patch.

 -- Guillem Jover <guillem@debian.org>  Thu,  9 Feb 2006 04:30:50 +0200

bochs (2.2.5-1) unstable; urgency=low

  * New Upstream Release.
    - debian/patches/00_base.patch: Synced.
    - debian/patches/01_doc.patch: Likewise.
    - debian/patches/02_libtool.patch: Likewise.
  * Debconf templates:
    - Added Spanish. (Closes: #333897)