@@ -2,11 +2,11 @@ Source: bochs
 Section: misc
 Priority: extra
 Maintainer: Guillem Jover <guillem@debian.org>
-Build-Depends: debhelper (>= 5), autoconf, chrpath, libz-dev, libncurses5-dev,
- libreadline5-dev | libreadline-dev, libaa1-dev, libsvga1-dev [i386 amd64],
- libasound2-dev [i386 amd64 powerpc alpha sparc m68k arm mips mipsel s390],
- libx11-dev, libxpm-dev, libice-dev, libsm-dev, libsdl1.2-dev,
- libwxgtk2.6-dev, libgtk2.0-dev
+Build-Depends: debhelper (>= 5), quilt (>= 0.40), autoconf, chrpath,
+ libz-dev, libncurses5-dev, libreadline5-dev | libreadline-dev, libaa1-dev,
+ libsvga1-dev [i386 amd64], libx11-dev, libxpm-dev, libice-dev, libsm-dev,
+ libsdl1.2-dev, libwxgtk2.6-dev, libgtk2.0-dev,
+ libasound2-dev [i386 amd64 powerpc alpha sparc m68k arm mips mipsel s390]
 Build-Depends-Indep: bcc (>= 0.16.3-2), bin86 (>= 0.16.3-2), perl, docbook-utils
 Standards-Version: 3.6.2
 
