@@ -1,0 +1,3 @@
+00_base.patch -p0
+01_man.patch -p0
+02_libtool.patch -p1
